Selection region.